--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "@tanstack/react-query": "^4.13.0",
+    "@tanstack/react-query-devtools": "^4.13.0",
+    "@trpc/client": "^10.0.0-proxy-beta.25",
+    "@trpc/next": "^10.0.0-proxy-beta.25",
+    "@trpc/react-query": "^10.0.0-proxy-beta.25",
+    "@trpc/server": "^10.0.0-proxy-beta.25",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/node": "18.11.2",
