--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "windstitch": "^0.3.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "postcss": "^8.4.18",
     "prisma": "^4.5.0",
     "tailwindcss": "^3.1.8",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "4.8.4"
   }
 }
